Optimize tests - remove unnecessary fields from test files - remove sensitive cloud provider values - address comments (update error handling and code style)

--- a/pkg/controllers/management/aks/test/onclusterchange_default.yaml
+++ b/pkg/controllers/management/aks/test/onclusterchange_default.yaml
@@ -10,11 +10,11 @@ metadata:
     lifecycle.cattle.io/create.mgmt-cluster-rbac-remove: "true"
   creationTimestamp: "2022-08-08T14:26:21Z"
   finalizers:
-  - wrangler.cattle.io/mgmt-cluster-remove
-  - controller.cattle.io/cluster-agent-controller-cleanup
-  - controller.cattle.io/cluster-scoped-gc
-  - controller.cattle.io/cluster-provisioner-controller
-  - controller.cattle.io/mgmt-cluster-rbac-remove
+    - wrangler.cattle.io/mgmt-cluster-remove
+    - controller.cattle.io/cluster-agent-controller-cleanup
+    - controller.cattle.io/cluster-scoped-gc
+    - controller.cattle.io/cluster-provisioner-controller
+    - controller.cattle.io/mgmt-cluster-rbac-remove
   generateName: c-
   generation: 13
   labels:
@@ -29,8 +29,8 @@ spec:
     authorizedIpRanges: null
     azureCredentialSecret: cattle-global-data:cc-26b5h
     baseUrl: null
-    clusterName: aks-monday
-    dnsPrefix: aks-dns-99922
+    clusterName: aks-test
+    dnsPrefix: aks-dns-prefix
     dnsServiceIp: null
     dockerBridgeCidr: null
     httpApplicationRouting: null
@@ -44,20 +44,20 @@ spec:
     networkPlugin: kubenet
     networkPolicy: null
     nodePools:
-    - availabilityZones:
-      - "1"
-      - "2"
-      - "3"
-      count: 1
-      enableAutoScaling: false
-      maxPods: 110
-      mode: System
-      name: agentpool
-      orchestratorVersion: 1.23.8
-      osDiskSizeGB: 128
-      osDiskType: Managed
-      osType: Linux
-      vmSize: Standard_DS2_v2
+      - availabilityZones:
+          - "1"
+          - "2"
+          - "3"
+        count: 1
+        enableAutoScaling: false
+        maxPods: 110
+        mode: System
+        name: agentpool
+        orchestratorVersion: 1.23.8
+        osDiskSizeGB: 128
+        osDiskType: Managed
+        osType: Linux
+        vmSize: Standard_DS2_v2
     podCidr: null
     privateCluster: false
     resourceGroup: aks-resource-group
@@ -83,84 +83,8 @@ spec:
     enabled: false
   windowsPreferedCluster: false
 status:
-  agentImage: ""
-  aksStatus:
-    privateRequiresTunnel: null
-    rbacEnabled: null
-    upstreamSpec: null
-  allocatable:
-    cpu: "0"
-    memory: "0"
-    pods: "0"
-  appliedEnableNetworkPolicy: false
-  appliedPodSecurityPolicyTemplateId: ""
-  appliedSpec:
-    agentImageOverride: ""
-    answers: {}
-    clusterSecrets: {}
-    description: ""
-    desiredAgentImage: ""
-    desiredAuthImage: ""
-    displayName: ""
-    enableClusterAlerting: false
-    enableClusterMonitoring: false
-    enableNetworkPolicy: null
-    internal: false
-    localClusterAuthEndpoint:
-      enabled: false
-    windowsPreferedCluster: false
-  authImage: ""
-  capabilities:
-    loadBalancerCapabilities: {}
-  capacity:
-    cpu: "0"
-    memory: "0"
-    pods: "0"
   conditions:
-  - status: "True"
-    type: Pending
-  - lastUpdateTime: "2022-08-08T10:26:25-04:00"
-    message: Waiting on aks crd to be initialized
-    status: Unknown
-    type: Provisioned
-  - lastUpdateTime: "2022-08-08T10:26:29-04:00"
-    message: Waiting for API to be available
-    status: Unknown
-    type: Waiting
-  - lastUpdateTime: "2022-08-08T10:26:22-04:00"
-    status: "True"
-    type: BackingNamespaceCreated
-  - lastUpdateTime: "2022-08-08T10:26:22-04:00"
-    status: "True"
-    type: DefaultProjectCreated
-  - lastUpdateTime: "2022-08-08T10:26:22-04:00"
-    status: "True"
-    type: SystemProjectCreated
-  - lastUpdateTime: "2022-08-08T10:26:22-04:00"
-    status: "True"
-    type: InitialRolesPopulated
-  - lastUpdateTime: "2022-08-08T10:26:23-04:00"
-    status: "True"
-    type: CreatorMadeOwner
-  - lastUpdateTime: "2022-08-08T10:26:24-04:00"
-    status: "True"
-    type: NoDiskPressure
-  - lastUpdateTime: "2022-08-08T10:26:24-04:00"
-    status: "True"
-    type: NoMemoryPressure
-  - lastUpdateTime: "2022-08-08T10:26:25-04:00"
-    status: "True"
-    type: SecretsMigrated
-  - lastUpdateTime: "2022-08-08T10:26:25-04:00"
-    status: "True"
-    type: ServiceAccountSecretsMigrated
-  driver: AKS
-  limits:
-    cpu: "0"
-    memory: "0"
-    pods: "0"
-  provider: ""
-  requested:
-    cpu: "0"
-    memory: "0"
-    pods: "0"
+    - lastUpdateTime: "2022-08-08T10:26:25-04:00"
+      message: Waiting on aks crd to be initialized
+      status: Unknown
+      type: Provisioned
