switch from busybox to rancher/mirrored-library-busybox:1.34.1

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -190,7 +190,7 @@ spec:
 {{- if eq .Values.auditLog.destination "sidecar" }}
   {{- if gt (int .Values.auditLog.level) 0 }}
       # Make audit logs available for Rancher log collector tools.
-      - image: {{ .Values.busyboxImage }}
+      - image: {{ .Values.busyboxImage }}:{{.Values.busyboxImageTag}}
         imagePullPolicy: {{ default "IfNotPresent" .Values.busyboxImagePullPolicy }}
         name: {{ template "rancher.name" . }}-audit-log
         command: ["tail"]
