--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -24,7 +24,8 @@ addLocal: "true"
 
 # Image for collecting rancher audit logs.
 # Important: update pkg/image/export/main.go when this default image is changed, so that it's reflected accordingly in rancher-images.txt generated for air-gapped setups.
-busyboxImage: busybox
+busyboxImage: rancher/mirrored-library-busybox
+busyboxImageTag: 1.34.1
 
 # Override imagePullPolicy for busybox images
 # options: Always, Never, IfNotPresent
