updating squid.conf for proxy to allow node-driver clusters. Adding CIDRs for downstream IPs in rancher no_proxy for proxy-airgap setup.

--- a/tests/validation/tests/v3_api/resource/squid/squid.conf
+++ b/tests/validation/tests/v3_api/resource/squid/squid.conf
@@ -11,6 +11,10 @@ acl localnet src 192.168.0.0/16	# RFC1918 possible internal network
 acl localnet src fc00::/7       # RFC 4193 local private network range
 acl localnet src fe80::/10      # RFC 4291 link-local (directly plugged) machines
 
+acl Safe_ports port 22      # ssh
+acl Safe_ports port 2376    # docker port 
+acl SSL_ports port 22
+acl SSL_ports port 2376
 acl SSL_ports port 443
 acl SSL_ports port 6443
 acl Safe_ports port 80		# http
