feat: Allows service annotations to be configured

--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -1,6 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
+{{- if .Values.service.annotations }}
+{{ toYaml .Values.service.annotations | indent 2 }}
+{{- end }}
   name: {{ template "rancher.fullname" . }}
   labels:
 {{ include "rancher.labels" . | indent 4 }}
