--- a/chart/tests/service_test.yaml
+++ b/chart/tests/service_test.yaml
@@ -20,3 +20,27 @@ tests:
   asserts:
   - isNull:
       path: spec.type
+- it: should set provided service annotation correctly
+  set:
+    service.annotations:
+      beta.cloud.google.com/backend-config: '{"default": "rancher-config"}'
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        beta.cloud.google.com/backend-config: '{"default": "rancher-config"}'
+- it: should set multiple provided service annotations correctly
+  set:
+    service.annotations:
+      beta.cloud.google.com/backend-config: '{"default": "rancher-config"}'
+      cloud.google.com/neg: '{"ingress": true}'
+  asserts:
+  - equal:
+      path: metadata.annotations
+      value:
+        beta.cloud.google.com/backend-config: '{"default": "rancher-config"}'
+        cloud.google.com/neg: '{"ingress": true}'
+- it: should not include service annotations if none are provided
+  asserts:
+  - isNull:
+      path: metadata.annotations
