--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -75,6 +75,7 @@ ingress:
 # Override to use NodePort or LoadBalancer service type - default is ClusterIP
 service:
   type: ""
+  annotations: {}
 
 ### LetsEncrypt config ###
 # ProTip: The production environment only allows you to register a name 5 times a week.
