--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
 {{- if .Values.service.annotations }}
-{{ toYaml .Values.service.annotations | indent 2 }}
+  annotations:
+{{ toYaml .Values.service.annotations | indent 4 }}
 {{- end }}
   name: {{ template "rancher.fullname" . }}
   labels:
