--- a/pkg/controllers/management/eks/test/onclusterchange_active.yaml
+++ b/pkg/controllers/management/eks/test/onclusterchange_active.yaml
@@ -119,6 +119,7 @@ status:
   - lastUpdateTime: "2022-08-16T11:20:47-04:00"
     status: "True"
     type: Updated
+  driver: EKS
   eksStatus:
     upstreamSpec:
       publicAccess: true
