--- a/tests/v2/validation/Dockerfile.validation
+++ b/tests/v2/validation/Dockerfile.validation
@@ -1,4 +1,4 @@
-FROM golang:1.17
+FROM golang:1.19
 
 # Configure Go
 ENV GOPATH /go
@@ -15,7 +15,7 @@ WORKDIR $WORKSPACE/tests/v2/validation
 COPY [".", "$WORKSPACE"]
 
 RUN go mod download && \
-    go get gotest.tools/gotestsum
+    go install gotest.tools/gotestsum@latest
 
 RUN CGO_ENABLED=0
 
