--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -22,7 +22,7 @@ auditLog:
   # Image for collecting rancher audit logs.
   # Important: update pkg/image/export/resolve.go when this default image is changed, so that it's reflected accordingly in rancher-images.txt generated for air-gapped setups.
   image:
-    repository: "registry.suse.com/bci/bci-micro"
+    repository: "rancher/mirrored-bci-micro"
     tag: 15.4.14.3
     # Override imagePullPolicy image
     # options: Always, Never, IfNotPresent
