--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -166,6 +166,9 @@ ENV CATTLE_UI_VERSION 2.7.0-rc8
 ENV CATTLE_DASHBOARD_UI_VERSION v2.7.0-rc8
 ENV CATTLE_CLI_VERSION v2.7.0-rc1
 
+# Base UI brand used as a fallback env setting (not user facing) to indicate this is a non-prime install
+ENV CATTLE_BASE_UI_BRAND=
+
 # Please update the api-ui-version in pkg/settings/settings.go when updating the version here.
 ENV CATTLE_API_UI_VERSION 1.1.9
 
