--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -27,7 +27,7 @@ jobs:
        echo "* v2.7" > $tmpfile
        echo "  * Latest - ${latest27} - \`rancher/rancher:${latest27}\` / \`rancher/rancher:latest\` - Read the full release [notes](https://github.com/rancher/rancher/releases/tag/${latest27})." >> $tmpfile
        echo "  * Stable - ${stable27} - \`rancher/rancher:${stable27}\` / \`rancher/rancher:stable\` - Read the full release [notes](https://github.com/rancher/rancher/releases/tag/${stable27})." >> $tmpfile
-       echo "* v2.6" > $tmpfile
+       echo "* v2.6" >> $tmpfile
        echo "  * Latest - ${latest26} - \`rancher/rancher:${latest26}\` / \`rancher/rancher:latest\` - Read the full release [notes](https://github.com/rancher/rancher/releases/tag/${latest26})." >> $tmpfile
        echo "  * Stable - ${stable26} - \`rancher/rancher:${stable26}\` / \`rancher/rancher:stable\` - Read the full release [notes](https://github.com/rancher/rancher/releases/tag/${stable26})." >> $tmpfile
        echo "* v2.5" >> $tmpfile
