Revert "Merge pull request #39581 from aiyengar2/final_rc_changes_2_7_0"
This reverts commit fe78be33779cd0d4ee122bd17e9678d3700f9787, reversing
changes made to d1813a2511771aae8f22ea6672f2cb0ace2b0f76.

--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -15,12 +15,12 @@ WORKDIR /var/lib/rancher
 
 ARG ARCH=amd64
 ARG IMAGE_REPO=rancher
-ARG SYSTEM_CHART_DEFAULT_BRANCH=release-v2.7
-ARG CHART_DEFAULT_BRANCH=release-v2.7
+ARG SYSTEM_CHART_DEFAULT_BRANCH=dev-v2.7
+ARG CHART_DEFAULT_BRANCH=dev-v2.7
 ARG PARTNER_CHART_DEFAULT_BRANCH=main
 ARG RKE2_CHART_DEFAULT_BRANCH=main
 # kontainer-driver-metadata branch to be set for specific branch other than dev/master, logic at rancher/rancher/pkg/settings/setting.go
-ARG CATTLE_KDM_BRANCH=release-v2.7
+ARG CATTLE_KDM_BRANCH=dev-v2.7
 
 ENV CATTLE_SYSTEM_CHART_DEFAULT_BRANCH=$SYSTEM_CHART_DEFAULT_BRANCH
 ENV CATTLE_CHART_DEFAULT_BRANCH=$CHART_DEFAULT_BRANCH
@@ -162,9 +162,9 @@ RUN curl -sLf ${!TINI_URL} > /usr/bin/tini && \
     mkdir -p /var/lib/rancher-data/driver-metadata
 
 # Versions for UI, DASHBOARD and CLI will be the same as 2.6 until new releases are made to these
-ENV CATTLE_UI_VERSION 2.7.0
-ENV CATTLE_DASHBOARD_UI_VERSION v2.7.0
-ENV CATTLE_CLI_VERSION v2.7.0
+ENV CATTLE_UI_VERSION 2.7.0-rc10
+ENV CATTLE_DASHBOARD_UI_VERSION v2.7.0-rc10
+ENV CATTLE_CLI_VERSION v2.7.0-rc1
 
 # Base UI brand used as a fallback env setting (not user facing) to indicate this is a non-prime install
 ENV CATTLE_BASE_UI_BRAND=
