Ignore Drone steps that generate GH binary (pre-)release (#154)

--- a/.drone.yml
+++ b/.drone.yml
@@ -322,6 +322,7 @@ steps:
 
 - name: github_binary_prerelease
   image: plugins/github-release
+  failure: ignore
   settings:
     api_key:
       from_secret: github_token
@@ -342,6 +343,7 @@ steps:
 
 - name: github_binary_release
   image: plugins/github-release
+  failure: ignore
   settings:
     api_key:
       from_secret: github_token
