--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -86,7 +86,7 @@ letsEncrypt:
 privateCA: false
 
 # http[s] proxy server passed into rancher server.
-# proxy: http://<username>@<password>:<url>:<port>
+# proxy: http://<username>:<password>@<url>:<port>
 
 # comma separated list of domains or ip addresses that will not use the proxy
 noProxy: 127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,.svc,.cluster.local
