Expose custom logos ConfigMap key-to-path item mapping
Signed-off-by: Elias Koromilas <elias.koromilas@gmail.com>

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -241,5 +241,9 @@ spec:
   {{- else if (eq .Values.customLogos.volumeKind "configMap") }}
         configMap:
           name: {{ .Values.customLogos.volumeName }}
+    {{- if .Values.customLogos.items }}
+          items:
+{{ toYaml .Values.customLogos.items | indent 10 }}
+    {{- end }}
   {{- end }}
 {{- end }}
