Fix installation with certain types of DNS
See: https://github.com/cert-manager/cert-manager/issues/3394

If I have a DHCP server which forwards example.com as a search domain then I have a wildcard CNAME record (`*`), cert-manager will fail to resolve https://acme-staging-v02.api.letsencrypt.org/directory correctly.

This can be fixed by adding a `.` at the end of `acme-staging-v02.api.letsencrypt.org`

--- a/chart/templates/issuer-letsEncrypt.yaml
+++ b/chart/templates/issuer-letsEncrypt.yaml
@@ -18,9 +18,9 @@ metadata:
 spec:
   acme:
     {{- if eq .Values.letsEncrypt.environment "production" }}
-    server: https://acme-v02.api.letsencrypt.org/directory
+    server: https://acme-v02.api.letsencrypt.org./directory
     {{- else }}
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    server: https://acme-staging-v02.api.letsencrypt.org./directory
     {{- end }}
     email: {{ .Values.letsEncrypt.email }}
     privateKeySecretRef:
