--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,9 @@ platform:
 steps:
 - name: build
   image: rancher/dapper:v0.5.4
+  environment:
+    GITHUB_TOKEN:
+      from_secret: github_token
   commands:
   - dapper ci
   privileged: true
@@ -263,6 +266,9 @@ platform:
 steps:
 - name: build
   image: rancher/dapper:v0.5.4
+  environment:
+    GITHUB_TOKEN:
+      from_secret: github_token
   commands:
   - dapper ci
   privileged: true
@@ -401,237 +407,6 @@ trigger:
     - promote
 ---
 kind: pipeline
-name: default-windows-1809
-
-platform:
-  os: windows
-  arch: amd64
-  version: 1809
-
-steps:
-  - name: build
-    pull: always
-    image: rancher/dapper:v0.5.4
-    commands:
-      - dapper.exe -f Dockerfile-windows-1809.dapper -d ci
-    volumes:
-      - name: docker_pipe
-        path: \\\\.\\pipe\\docker_engine
-    when:
-      event:
-        - push
-        - pull_request
-        - tag
-
-  - name: stage-binaries
-    image: rancher/dapper:v0.5.4
-    commands:
-      - "cp -r ./bin/* ./package/windows/"
-    when:
-      event:
-        - push
-        - tag
-
-  - name: docker-publish-head-agent
-    image: plugins/docker:windows-1809-amd64
-    settings:
-      purge: false
-      build_args:
-        - SERVERCORE_VERSION=1809
-        - ARCH=amd64
-        - VERSION=${DRONE_BRANCH/release\//}-${DRONE_COMMIT}-head
-      context: package/windows
-      custom_dns: 1.1.1.1
-      dockerfile: package/windows/Dockerfile.agent
-      password:
-        from_secret: docker_password
-      repo: rancher/rancher-agent
-      tag: ${DRONE_BRANCH/release\//}-${DRONE_COMMIT}-windows-1809
-      username:
-        from_secret: docker_username
-    volumes:
-      - name: docker_pipe
-        path: \\\\.\\pipe\\docker_engine
-    when:
-      ref:
-        include:
-        - "refs/heads/master"
-        - "refs/heads/release/v*"
-      event:
-        - push
-
-  - name: docker-publish-agent
-    image: plugins/docker:windows-1809-amd64
-    settings:
-      purge: false
-      build_args:
-        - SERVERCORE_VERSION=1809
-        - ARCH=amd64
-        - "VERSION=${DRONE_TAG}"
-      context: package/windows
-      custom_dns: 1.1.1.1
-      dockerfile: package/windows/Dockerfile.agent
-      password:
-        from_secret: docker_password
-      repo: rancher/rancher-agent
-      tag: "${DRONE_TAG}-windows-1809"
-      username:
-        from_secret: docker_username
-    volumes:
-      - name: docker_pipe
-        path: \\\\.\\pipe\\docker_engine
-    when:
-      event:
-        - tag
-
-  - name: slack_notify
-    image: plugins/slack
-    settings:
-      template: "Build {{build.link}} failed to publish an image/artifact.\n"
-      username: Drone_Publish
-      webhook:
-        from_secret: slack_webhook
-    when:
-      event:
-        exclude:
-          - pull_request
-      instance:
-        - drone-publish.rancher.io
-      status:
-        - failure
-
-volumes:
-  - name: docker_pipe
-    host:
-      path: \\\\.\\pipe\\docker_engine
-
-trigger:
-  event:
-    exclude:
-      - promote
-
----
-kind: pipeline
-name: default-windows-2004
-
-platform:
-  os: windows
-  arch: amd64
-  version: 2004
-
-# remove this and use upstream images when https://github.com/drone/drone-git/pull/25 is merged
-clone:
-  disable: true
-
-steps:
-  - name: clone
-    image: rancher/drone-images:git-2004
-    settings:
-      depth: 20
-  - name: build
-    pull: always
-    image: rancher/dapper:v0.5.4
-    commands:
-      - dapper.exe -f Dockerfile-windows-2004.dapper -d ci
-    volumes:
-      - name: docker_pipe
-        path: \\\\.\\pipe\\docker_engine
-    when:
-      event:
-        - push
-        - pull_request
-        - tag
-
-  - name: stage-binaries
-    image: rancher/dapper:v0.5.4
-    commands:
-      - "cp -r ./bin/* ./package/windows/"
-    when:
-      event:
-        - push
-        - tag
-
-  - name: docker-publish-head-agent
-    image: rancher/drone-images:docker-2004
-    settings:
-      purge: false
-      build_args:
-        - SERVERCORE_VERSION=2004
-        - ARCH=amd64
-        - VERSION=${DRONE_BRANCH/release\//}-${DRONE_COMMIT}-head
-      context: package/windows
-      custom_dns: 1.1.1.1
-      dockerfile: package/windows/Dockerfile.agent
-      password:
-        from_secret: docker_password
-      repo: rancher/rancher-agent
-      tag: ${DRONE_BRANCH/release\//}-${DRONE_COMMIT}-windows-2004
-      username:
-        from_secret: docker_username
-    volumes:
-      - name: docker_pipe
-        path: \\\\.\\pipe\\docker_engine
-    when:
-      ref:
-        include:
-          - "refs/heads/master"
-          - "refs/heads/release/v*"
-      event:
-        - push
-
-  - name: docker-publish-agent
-    image: rancher/drone-images:docker-2004
-    failure: ignore
-    settings:
-      purge: false
-      build_args:
-        - SERVERCORE_VERSION=2004
-        - ARCH=amd64
-        - "VERSION=${DRONE_TAG}"
-      context: package/windows
-      custom_dns: 1.1.1.1
-      dockerfile: package/windows/Dockerfile.agent
-      password:
-        from_secret: docker_password
-      repo: rancher/rancher-agent
-      tag: "${DRONE_TAG}-windows-2004"
-      username:
-        from_secret: docker_username
-    volumes:
-      - name: docker_pipe
-        path: \\\\.\\pipe\\docker_engine
-    when:
-      event:
-        - tag
-
-  - name: slack_notify
-    image: plugins/slack
-    settings:
-      template: "Build {{build.link}} failed to publish an image/artifact.\n"
-      username: Drone_Publish
-      webhook:
-        from_secret: slack_webhook
-    when:
-      event:
-        exclude:
-          - pull_request
-      instance:
-        - drone-publish.rancher.io
-      status:
-        - failure
-
-volumes:
-  - name: docker_pipe
-    host:
-      path: \\\\.\\pipe\\docker_engine
-
-trigger:
-  event:
-    exclude:
-      - promote
-
----
-kind: pipeline
 name: manifest
 
 steps:
@@ -706,6 +481,9 @@ steps:
 
 - name: build-chart
   image: rancher/dapper:v0.5.4
+  environment:
+    GITHUB_TOKEN:
+      from_secret: github_token
   commands:
   - dapper chart/ci
   privileged: true
@@ -845,103 +623,6 @@ trigger:
 depends_on:
 - default-linux-amd64
 - default-linux-arm64
----
-kind: pipeline
-name: docker-image-digests-windows-1809
-
-platform:
-  os: windows
-  arch: amd64
-  version: 1809
-
-steps:
-- name: docker-image-digests
-  image: rancher/drone-docker-image-digests:v0.0.11
-  environment:
-    PLUGIN_GITHUB_REPOSITORY: "rancher/rancher"
-    PLUGIN_GITHUB_TOKEN:
-      from_secret: github_token
-    PLUGIN_GITHUB_TAG: "${DRONE_TAG}"
-    PLUGIN_INPUT_FILE: "rancher-windows-images.txt"
-    PLUGIN_OUTPUT_FILE: "rancher-images-digests-windows-1809.txt"
-    PLUGIN_REGISTRY: "docker.io"
-  volumes:
-    - name: docker_pipe
-      path: \\\\.\\pipe\\docker_engine
-  when:
-    instance:
-      include:
-      - drone-publish.rancher.io
-    event:
-    - tag
-
-volumes:
-  - name: docker_pipe
-    host:
-      path: \\\\.\\pipe\\docker_engine
-
-trigger:
-  event:
-    exclude:
-    - promote
-
-depends_on:
-- default-linux-amd64
-- default-windows-1809
-
----
-kind: pipeline
-name: docker-image-digests-windows-2004
-
-platform:
-  os: windows
-  arch: amd64
-  version: 2004
-
-# remove this and use upstream images when https://github.com/drone/drone-git/pull/25 is merged
-clone:
-  disable: true
-
-steps:
-- name: clone
-  image: luthermonson/drone-git:windows-2004-amd64
-  settings:
-    depth: 20
-
-- name: docker-image-digests
-  image: rancher/drone-docker-image-digests:v0.0.11
-  environment:
-    PLUGIN_GITHUB_REPOSITORY: "rancher/rancher"
-    PLUGIN_GITHUB_TOKEN:
-      from_secret: github_token
-    PLUGIN_GITHUB_TAG: "${DRONE_TAG}"
-    PLUGIN_INPUT_FILE: "rancher-windows-images.txt"
-    PLUGIN_OUTPUT_FILE: "rancher-images-digests-windows-2004.txt"
-    PLUGIN_REGISTRY: "docker.io"
-  volumes:
-    - name: docker_pipe
-      path: \\\\.\\pipe\\docker_engine
-  when:
-    instance:
-      include:
-      - drone-publish.rancher.io
-    event:
-    - tag
-
-volumes:
-  - name: docker_pipe
-    host:
-      path: \\\\.\\pipe\\docker_engine
-
-trigger:
-  event:
-    exclude:
-    - promote
-
-depends_on:
-- default-linux-amd64
-- default-windows-2004
-
 ---
 kind: pipeline
 name: publish
