--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -101,7 +101,7 @@ RUN apt-get update && \
     apt-get install -y tox python3.8 python3-dev python3.8-dev libffi-dev libssl-dev
 
 ENV HELM_HOME /root/.helm
-ENV DAPPER_ENV REPO TAG DRONE_TAG SYSTEM_CHART_DEFAULT_BRANCH
+ENV DAPPER_ENV REPO TAG DRONE_TAG SYSTEM_CHART_DEFAULT_BRANCH GITHUB_TOKEN
 ENV DAPPER_SOURCE /go/src/github.com/rancher/rancher/
 ENV DAPPER_OUTPUT ./bin ./dist
 ENV DAPPER_DOCKER_SOCKET true
